[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PspaMM"
description="Inline assembly generator for sparse matrix multiplications"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    { name = "Peter Wauligmann", email = "peter.wauligmann@gmail.com" },
    { name = "Nathan Brei", email = "nathan.w.brei@gmail.com" },
    { name = "Alex Puscas", email = "alex-puscas@gmx.de" },
    { name = "David Schneller", email = "david.schneller@tum.de" },
    { name = "Lukas Krenz", email = "lukas@krenz.land" },
    { name = "Carsten Uphoff", email = "uphoff@in.tum.de" },
]
maintainers = [
    { name = "David Schneller", email = "david.schneller@tum.de" },
]
classifiers= [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {file = ["pspamm/VERSION"]}
dependencies = {file = ["requirements.txt"]}

[project.scripts]
pspamm-generator = "pspamm.cli:main"
